--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
